# cs6378-proj1

./: CMakeLists.txt  README.md  cleanup.sh  launcher.sh
docs/: README.md  sctp.md
ds/: config.txt  main.cpp
ds/test_sctp_wrapper/: test_server.cpp
include/: config.hpp  map_protocol.hpp  message.hpp  node.hpp  sctp_wrapper.hpp  snapshot_manager.hpp  termination_manager.hpp
lib/: config.cpp  map_protocol.cpp  sctp_wrapper.cpp  snapshot_manager.cpp  termination_manager.cpp
tests/: CMakeLists.txt
tests/config/: test_check_bidirectional_neighbors.cpp  test_clean_valid_lines.cpp  test_get_filename_no_ext.cpp  test_is_valid_line.cpp  test_open_file.cpp  test_parse_config.cpp  test_parse_neighbors.cpp  test_parse_nodes.cpp  test_read_valid_lines.cpp  test_strip_comments.cpp  test_trim.cpp
tests/map_protocol/: test_map_protocol.cpp
tests/sctp_wrapper/: test_client.cpp  test_connect_to_peer.cpp  test_create_listen_socket.cpp
tests/snapshot_manager/: test_snapshot_manager.cpp
